# gcp-genai-leader-tutor

./: README.md  pyproject.toml
src/genai_tutor/: __init__.py  __main__.py  app.py  dashboard.py  db.py  flashcards.py  importer.py  models.py  quiz.py  review.py  seed.py  sm2.py  study.py
src/genai_tutor/content/: domains.json  flashcards.json  questions.json  reading.json
tests/: test_content.py  test_dashboard.py  test_db.py  test_importer.py  test_quiz.py  test_sm2.py
